- define body as any object
