# docs/swagger.json
@@ -210,7 +210,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_controllers.DeviceRuptelaStatusPatch"
+                            "type": "object"
                         }
                     }
                 ],
@@ -539,51 +539,6 @@
                     "type": "string"
                 },
                 "version": {
-                    "type": "string"
-                }
-            }
-        },
-        "internal_controllers.DeviceRuptelaStatusPatch": {
-            "type": "object",
-            "properties": {
-                "accessTech": {
-                    "description": "ignored, it is only used to validate the signature and authenticate the device",
-                    "type": "string"
-                },
-                "battVolt": {
-                    "description": "ignored, it is only used to validate the signature and authenticate the device",
-                    "type": "string"
-                },
-                "cellId": {
-                    "description": "ignored, it is only used to validate the signature and authenticate the device",
-                    "type": "string"
-                },
-                "fwVersion": {
-                    "description": "FwVersion version of firmware that was confirmed installed on device",
-                    "type": "string"
-                },
-                "hwVersion": {
-                    "description": "ignored, it is only used to validate the signature and authenticate the device",
-                    "type": "string"
-                },
-                "imei": {
-                    "description": "ignored, it is only used to validate the signature and authenticate the device",
-                    "type": "string"
-                },
-                "locAreaCode": {
-                    "description": "ignored, it is only used to validate the signature and authenticate the device",
-                    "type": "string"
-                },
-                "operator": {
-                    "description": "ignored, it is only used to validate the signature and authenticate the device",
-                    "type": "string"
-                },
-                "sigStrength": {
-                    "description": "ignored, it is only used to validate the signature and authenticate the device",
-                    "type": "string"
-                },
-                "sn": {
-                    "description": "ignored, it is only used to validate the signature and authenticate the device",
                     "type": "string"
                 }
             }
