# internal/controllers/device_config_controller.go
@@ -501,7 +501,7 @@ func (d *DeviceConfigController) PatchHwConfigStatusByEthAddr(c *fiber.Ctx) erro
 // @Success      200 "Successfully updated"
 // @Failure 500  "unable to parse request or storage failure"
 // @Param        ethAddr  path   string  true  "Ethereum Address"
-// @Param        config body DeviceRuptelaStatusPatch true "set any properties that were updated on the device"
+// @Param        config body object true "set any properties that were updated on the device"
 // @Security     SignatureAuth
 // @Router       /device-config/eth-addr/{ethAddr}/ruptela/status [patch]
 func (d *DeviceConfigController) PatchRuptelaConfigStatusByEthAddr(c *fiber.Ctx) error {
@@ -563,29 +563,6 @@ type DeviceTemplateStatusPatch struct {
 	// SettingsUrl exists for backwards compatibiltiy
 	// Deprecated
 	SettingsURL string `json:"settingsUrl"`
-}
-
-type DeviceRuptelaStatusPatch struct {
-	// FwVersion version of firmware that was confirmed installed on device
-	FWVersion string `json:"fwVersion"`
-	// ignored, it is only used to validate the signature and authenticate the device
-	SN string `json:"sn"`
-	// ignored, it is only used to validate the signature and authenticate the device
-	BattVolt string `json:"battVolt"`
-	// ignored, it is only used to validate the signature and authenticate the device
-	HWVersion string `json:"hwVersion"`
-	// ignored, it is only used to validate the signature and authenticate the device
-	IMEI string `json:"imei"`
-	// ignored, it is only used to validate the signature and authenticate the device
-	SigStrength string `json:"sigStrength"`
-	// ignored, it is only used to validate the signature and authenticate the device
-	AccessTech string `json:"accessTech"`
-	// ignored, it is only used to validate the signature and authenticate the device
-	Operator string `json:"operator"`
-	// ignored, it is only used to validate the signature and authenticate the device
-	LocAreaCode string `json:"locAreaCode"`
-	// ignored, it is only used to validate the signature and authenticate the device
-	CellID string `json:"cellId"`
 }
 
 func padByteArray(input []byte, targetLength int) []byte {
